Fix code highlight and single page on small screens

--- a/assets/style/modules/_helpers.scss
+++ b/assets/style/modules/_helpers.scss
@@ -30,3 +30,10 @@
 	padding: 0.5em 1.8em;
 	overflow: auto;
 }
+
+
+.highlight code {
+	margin: 0 auto;
+    width: 83ch;
+    display: block;
+}
