--- a/assets/style/skeleton/_single-grid.scss
+++ b/assets/style/skeleton/_single-grid.scss
@@ -15,7 +15,7 @@
         "listofcontent"        
         ;
     grid-template-columns: 1fr;
-    grid-template-rows: 100vh auto; 
+    grid-template-rows: auto auto; 
 }
 
 
